--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -48,207 +48,6 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal" >
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="120dp"
@@ -293,6 +92,8 @@
                 android:text="@string/DOB"
                 android:textAppearance="?android:attr/textAppearanceSmall" />
 
+
+
         </LinearLayout>
 
 
@@ -301,21 +102,39 @@
 	<LinearLayout
 	    android:id="@+id/llListView"
 	    android:visibility="invisible"
-	    android:layout_height="fill_parent"
+	    android:layout_height="450dp"
 	    android:layout_width="fill_parent"
 	    android:background="@color/Green">
-	    <ListView
-	        android:id="@+id/listView1"
-	        android:layout_width="fill_parent"
-	        android:layout_height="fill_parent" 
-	        android:choiceMode="none" 
-	        android:divider="@color/Orange" 
-	        android:dividerHeight="2dp" 
-	        android:fadeScrollbars="true"
-	        android:layout_margin="2dp"
-	        android:background="@color/Black" >
-	    </ListView>
-    </LinearLayout>
-    
+
+		<ListView
+			android:id="@+id/listView1"
+			android:layout_width="fill_parent"
+			android:layout_height="fill_parent"
+			android:layout_margin="2dp"
+			android:background="@color/Black"
+			android:choiceMode="none"
+			android:divider="@color/Orange"
+			android:dividerHeight="2dp"
+			android:fadeScrollbars="true"></ListView>
+
+
+	</LinearLayout>
+
+	<LinearLayout
+		android:layout_width="match_parent"
+		android:layout_height="90dp"
+		android:orientation="horizontal">
+
+		<Button
+			android:id="@+id/btnAdd"
+			android:layout_width="fill_parent"
+			android:layout_height="fill_parent"
+			android:layout_weight="1"
+			android:text="ADD PATIENT"
+			android:drawableTop="@drawable/add"/>
+
+	</LinearLayout>
+
+
 	    
 </LinearLayout>
